[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/FencerSide.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Foil.tscn" type="PackedScene" id=2]
[ext_resource path="res://Script/Dummy.gd" type="Script" id=4]
[ext_resource path="res://Scenes/RightOfWayIndicator.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 34.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.5, 122 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 64.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50.5, 123.5 )

[node name="Dummy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 4 )

[node name="Foil" parent="." instance=ExtResource( 2 )]
position = Vector2( -58, 21 )
rotation = -1.5708
script = null

[node name="DummyFencer" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
flip_h = true

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2( 32, 43 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -37, -26 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 5, 7 )
shape = SubResource( 2 )

[node name="ArrowControl" parent="." instance=ExtResource( 5 )]
margin_left = 23.0
margin_top = -267.0
margin_right = 23.0
margin_bottom = -267.0

[node name="Arrow" parent="ArrowControl" index="0"]
margin_left = -46.0
margin_top = 4.0
margin_right = -16.0
margin_bottom = 77.0

[node name="PrioAttack" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PrioAttack"]
position = Vector2( -124.25, 18 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="DefAttack" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefAttack"]
position = Vector2( -82.5, 5.5 )
shape = SubResource( 4 )

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_entered" from="PrioAttack" to="." method="_on_PrioAttack_body_entered"]
[connection signal="body_entered" from="DefAttack" to="." method="_on_DefAttack_body_entered"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]

[editable path="Foil"]
[editable path="ArrowControl"]
